# My-SpaceEngine

./: CMakeLists.txt  Fundação  README.md  Solar sistem  engineCoreApplication.cpp  engineCoreApplication.hpp  engineCoreVersion.hpp  srcmain.cpp  styles.css
CosmosEngine_Pacote_0001/: README.md
CosmosEngine_Pacote_0001/engine/Core/: Application.cpp  Application.hpp
CosmosEngine_Pacote_0001/src/: main.cpp
CosmosEngine_Pacote_0002/: CMakeLists.txt  README.md
CosmosEngine_Pacote_0002/engine/Core/: Application.cpp
CosmosEngine_Pacote_0002/engine/Platform/: Window.cpp  Window.hpp
CosmosEngine_Pacote_0002/src/: main.cpp
CosmosEngine_Pacote_0003/docs/: NOTES.md
CosmosEngine_Pacote_0003/engine/Platform/: Window.cpp  Window.hpp
CosmosEngine_Pacote_0004/docs/: README_0004.md
CosmosEngine_Pacote_0004/engine/Input/: Input.cpp  Input.hpp
CosmosEngine_Pacote_0004/engine/Platform/: Event.hpp  Window.cpp  Window.hpp
CosmosEngine_Pacote_0005/cmake/: Dependencies.cmake
CosmosEngine_Pacote_0005/docs/: README_0005.md
CosmosEngine_Pacote_0005/engine/Platform/: GLFWWindow.cpp  GLFWWindow.hpp
CosmosEngine_Pacote_0006/docs/: README_0006.md
CosmosEngine_Pacote_0006/engine/Renderer/Vulkan/: VulkanInstance.cpp  VulkanInstance.hpp
CosmosEngine_Pacote_0007/docs/: README_0007.md
CosmosEngine_Pacote_0007/engine/Renderer/Vulkan/: ValidationLayers.hpp  VulkanContext.cpp  VulkanContext.hpp
CosmosEngine_Pacote_0008/docs/: README_0008.md
CosmosEngine_Pacote_0009/docs/: README_0009.md
CosmosEngine_Pacote_0010/docs/: README_0010.md
(+6 files in other folders)
